Added fileds to return from mail handlers
